--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="./src/assets/images/link.svg" />
+    <link rel="icon" type="image/svg" href=".vite-project/src/assets/images/link.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artigos Tech</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./vite-project/src/main.jsx"></script>
   </body>
 </html>
